--- a/style.css
+++ b/style.css
@@ -1,116 +1,180 @@
 body {
-    display: flex; 
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 }
-.container{
-    text-align: center;
-    width: 50%;
-    height: 75%;
-    border: 2px solid black;
-    background-color: #1a1b1b;
+.container {
+  text-align: center;
+  width: 50%;
+  height: 75%;
+  border: 2px solid black;
+  background-color: #1a1b1b;
 }
-.heading1{
-    color: #d4d4d4;
+.heading1 {
+  color: #d4d4d4;
 }
-.heading2{
-    color: #dc8f18;
-}
-
-.search-box{
-    display: flex;
-    justify-content: center;
+.heading2 {
+  color: #dc8f18;
 }
 
-.search-box input{
-    width: 200px;
+.search-box {
+  display: flex;
+  justify-content: center;
 }
 
-.stats{
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 10px;
-    margin: 30px;
+.search-box input {
+  width: 200px;
 }
 
-.easy-stat{
-    color: #d4d4d4;
+.stats {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin: 30px;
 }
 
-.medium-stat{
-    color: #c29520;
+.easy-stat {
+  color: #d4d4d4;
 }
 
-.hard-stat{
-    color: #f7375d;
+.medium-stat {
+  color: #c29520;
 }
 
-.all-stat{
-    color: #d4d4d4;
+.hard-stat {
+  color: #f7375d;
 }
 
-.circle{
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    border: 4px solid #299f5d;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 16px;
-    font-weight: 700;
-    background: conic-gradient(#299f5d var(--progress-degree,0%),#283a2e 0%);
-    text-align: center;
-    white-space: normal;    
-    word-wrap: break-word; 
-    padding: 5px; 
-    box-sizing: border-box;
-    flex-direction: column;
+.all-stat {
+  color: #d4d4d4;
 }
 
-.error{
-    color: red;
-    margin-left: 10px;
-    font-size: 14px;
-    margin-top: 10px;
-    font-weight: bold;
-    animation: blink 1s infinite;
-    display: none;
+.circle {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  border: 4px solid #299f5d;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  font-weight: 700;
+  background: conic-gradient(#299f5d var(--progress-degree, 0%), #283a2e 0%);
+  text-align: center;
+  white-space: normal;
+  word-wrap: break-word;
+  padding: 5px;
+  box-sizing: border-box;
+  flex-direction: column;
 }
 
-.notFound{
-    color: red;
-    margin-left: 10px;
-    font-size: 14px;
-    margin-top: 10px;
-    font-weight: bold;
-    animation: blink 1s infinite;
+.error {
+  color: red;
+  margin-left: 10px;
+  font-size: 14px;
+  margin-top: 10px;
+  font-weight: bold;
+  animation: blink 1s infinite;
+  display: none;
+}
+
+.notFound {
+  color: red;
+  margin-left: 10px;
+  font-size: 14px;
+  margin-top: 10px;
+  font-weight: bold;
+  animation: blink 1s infinite;
 }
 
 @keyframes blink {
-    0% { opacity: 1; }
-    50% { opacity: 0; }
-    100% { opacity: 1; } 
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.ranking {
+  display: flex;
+  justify-content: center;
+}
+.rank {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 4px solid #299f5d;
+  background-color: #283a2e;
+  color: #f6f7f7;
+  width: 150px;
+  height: 50px;
+  padding: 5px;
+}
+
+@media (max-width: 800px) {
+  .container {
+    width: 70%;
+    height: auto;
+    padding: 20px;
   }
 
-.ranking{
-    display: flex;
-    justify-content: center;
-}
-.rank{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 4px solid #299f5d;
-    background-color: #283a2e;
-    color: #f6f7f7;
+  .search-box input {
     width: 150px;
-    height: 50px;
-    padding: 5px;
-    
+  }
+
+  .circle {
+    width: 100px;
+    height: 100px;
+    font-size: 14px;
+  }
+
+  .rank {
+    width: 130px;
+    height: 45px;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 500px) {
+  .container {
+    width: 90%;
+    height: auto;
+    padding: 15px;
+  }
+
+  .search-box {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .search-box input {
+    width: 100%;
+  }
+
+  .stats {
+    flex-direction: column;
+    gap: 15px;
+    align-items: center;
+  }
+
+  .circle {
+    width: 90px;
+    height: 90px;
+    font-size: 12px;
+  }
+
+  .rank {
+    width: 120px;
+    height: 40px;
+    font-size: 12px;
+  }
 }
